Checkpoint before follow-up message
Co-authored-by: rainer.collet <rainer.collet@gmail.com>